--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@
 # github.com/bhardwajAbhi
 #
 site_name: Abhishek Bhardwaj
-site_url: https://www.github.com/bhardwajAbhi/ # must have the trailing slash
+site_url: https://bhardwajabhi.github.io/MyBlogs/ # must have the trailing slash
 site_author: Abhishek Bhardwaj (abhishekbhardwaj090@gmail.com)
 site_description: Tutorials, Blogs, Guides on Android.
 copyright: >  
